Avoid content jumping when values change

--- a/web/assets/stylesheets/application.css
+++ b/web/assets/stylesheets/application.css
@@ -422,14 +422,20 @@ div.interval-slider input {
   padding-left: 30px;
   display: flex;
   justify-content: end;
-  gap: 15px;
   align-items: center;
+}
+#realtime-legend > * {
+  min-width: 14rem;
 }
 #realtime-legend .swatch {
   display: inline-block;
   width: 10px;
   height: 10px;
   margin: 0 5px;
+}
+#realtime-legend .time {
+  min-width: auto;
+  text-align: right;
 }
 
 /* Beacon
